added trasaction gathering, store gathering, and store updating

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,4 +1,6 @@
 <input type="file" (change)="onFileSelected($event)">
 
-<button (click)="getNow()"></button>
+<button (click)="getTransactionsNow()"> Get Transactionss</button>
+<button (click)="getStoresNow()"> Get Stores</button>
+<button (click)="updateStoresNow()"> Update Stores</button>
 <router-outlet></router-outlet>
