working on new account inputs

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -3,4 +3,6 @@
 <button (click)="getTransactionsNow()"> Get Transactionss</button>
 <button (click)="getStoresNow()"> Get Stores</button>
 <button (click)="updateStoresNow()"> Update Stores</button>
+<input [(ngModel)]="temp3"/>
+<button (click)="createAccount()">Print Input</button>
 <router-outlet></router-outlet>
