--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,6 +1,7 @@
 <input type="file" (change)="onFileSelected($event)">
 
-<button (click)="getTransactionsNow()"> Get Transactionss</button>
+<button mat-button (click)="getTransactionsNow()"> Get Transactionss</button>
+<button mat-raised-button>Basic</button>
 <button (click)="getStoresNow()"> Get Stores</button>
 <button (click)="updateStoresNow()"> Update Stores</button>
 <input [(ngModel)]="temp3"/>
